Copia con update!
Ya estan aquí algunos de los cambios que vamos realizando

--- a/html/about_us/about_us.html
+++ b/html/about_us/about_us.html
@@ -488,9 +488,9 @@
 
         	<img src="assets/media/about_us/about_us/backgroundAboutUs.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
 
-			<div data-src="assets/media/about_us/about_us/backgroundAboutUs3.jpg"></div>
+			<div data-src="assets/media/about_us/about_us/Branding-GIdeas_I-C-9.jpg"></div>
 
-            <div data-src="assets/media/about_us/about_us/backgroundAboutUs2.jpg"></div>
+            <div data-src="assets/media/about_us/about_us/Branding-GIdeas_I-C-10.jpg"></div>
 
         </div>	
 
@@ -521,8 +521,9 @@
                         <div class="main-text-holder">
 
 
+                        	
 
-                        	<p><strong>PROMESA PRINCIPAL COMO MARCA</br> </strong> La capacidad de sorprender, “sacudiendo” la rutinaria cotidianidad y estresante complexidad de la vida urbana para interesar, involucrar y conquistar a todos nuestros interolocutores.</p>
+                        	<p><strong>The Red Mark </strong><br><br><br> <strong>ES EL SELLO ÚNICO QUE IDENTIFICA NUESTRA: </strong><br><br><strong>PROMESA PRINCIPAL COMO MARCA</br> </strong> La capacidad de sorprender, “sacudiendo” la rutinaria cotidianidad y estresante complexidad de la vida urbana para interesar, involucrar y conquistar a todos nuestros interolocutores.</p>
 
                             <p><strong>MISIÓN COMO AGENCIA</br></strong> Dar vida a ideas, estrategias y ejecuciones con la capacidad de sorprender a nuestros clientes y a  sus posibles audiencias meta.  
 </p>
