--- a/html/about_us/philosophy.html
+++ b/html/about_us/philosophy.html
@@ -511,6 +511,11 @@
             <div id="cohete4" class="v4"><img src="assets/media/philoshopy/cohete4.png" width="100"/><p  class="tooltip3">Te sorprendo porque te ATRAPO.</p></div>
         </div>
 
+        <div class="wrapper_text">
+        	<div class="text_lets"><span class="lets">let’s get HIGH</span> resume nuestra <span class="bolder">filosofía de trabajo</span> en cuanto fundamento y motor  de la capacidad de sorprender.</div>
+        	<div class="text_lets"><span class="lets">let’s get HIGH</span> es el switch que todos los días <span class="bolder">nos activa a llegar siempre un poco más alto,</span>  superando las expectativas de cualquier interlocutor con una <span class="bolder">actitud positiva,  apasionada, relajada y constructiva.</span> </div>
+        	<div class="text_lets"><span class="lets">let’s get HIGH</span> es lo que nos <span class="bolder">impulsa</span> constantemente a <span class="bolder">asombrar</span> cualquier público con nuestras <span class="bolder">IDEAS,</span>  a despertar su <span class="bolder">INTERÉS </span>con nuestras <span class="bolder">ESTRATEGIAS,</span> a <span class="bolder">atraparlo</span> con nuestras <span class="bolder">EJECUCIONES</span> y a <span class="bolder">conquistarlo</span> con nuestra capacidad de <span class="bolder">ENTRETENER.</span></div>
+        </div>
 
 
         <div id="module-container-holder" class="module-position-cc"  data-id="module-position-cc">
