--- a/html/our_projects/descargas.html
+++ b/html/our_projects/descargas.html
@@ -502,7 +502,7 @@
 
                         <div class="columns-filter-holder">
 
-                            <div id="filter-buttons-holder">
+                            <div id="filter-buttons-holder" class="downloads-buttons">
 
                                 <div class="filter-button" data-filter="animation">FOLDER ICONS</div>
 
@@ -874,9 +874,9 @@
                                             <p>Wallpapers</p>
 
                                             <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1200px</a></br><br><br>
                                             </span>
 
                                            
@@ -894,9 +894,9 @@
                                             <p>Wallpapers</p>
 
                                            <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1200px</a></br><br><br>
                                             </span>
 
 
@@ -913,9 +913,9 @@
                                             <p>Wallpapers</p>
 
                                             <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px;color:#727272;">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px;color:#FFFFFF;">Gideas 1200px</a></br><br><br>
                                             </span>
 
                                         </div>
@@ -935,9 +935,9 @@
                                             <p>Social Network</p>
 
                                            <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas 1200px</a></br><br><br>
                                             </span>
 
                                         </div>
@@ -953,7 +953,7 @@
                                             <p>Social Network</p>
 
                                             <span>
-                                                    <br><br><br><br><a href="assets/media/store/social/VI_C-1-ii.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas Facebook</a>
+                                                    <br><br><br><br><a href="assets/media/store/social/VI_C-1-ii.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Facebook</a>
 
 
                                             </span>
@@ -970,7 +970,7 @@
 
                                             <p>Social Network</p>
 
-                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-1-iii.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas Facebook</a></span>
+                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-1-iii.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Facebook</a></span>
 
                                         </div>
 
@@ -984,7 +984,7 @@
 
                                             <p>Social Network </p>
 
-                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-3-i.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas Twitter</a></span>
+                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-3-i.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Twitter</a></span>
 
                                         </div>
 
@@ -999,7 +999,7 @@
                                             <p>Social Network</p>
 
                                           
-                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-3-ii.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas Twitter</a></span>
+                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_C-3-ii.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Twitter</a></span>
 
                                         </div>
 
@@ -1013,7 +1013,7 @@
 
                                             <p>FOLDER ICONS</p>
 
-                                              <span>  <br><br><br><br><a href="assets/media/store/social/VI_D-1.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas Folder Icons</a></span>
+                                              <span>  <br><br><br><br><a href="assets/media/store/social/VI_D-1.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Folder Icons</a></span>
 
                                         </div>
 
@@ -1027,7 +1027,7 @@
 
                                             <p>FOLDER ICONS</p>
 
-                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_D-2.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas Folder Icons</a></span>
+                                            <span>  <br><br><br><br><a href="assets/media/store/social/VI_D-2.zip" style="text-decoration: none; font-size:18px; color:#FFFFFF;">Gideas Folder Icons</a></span>
 
                                         </div>
 
