--- a/html/our_projects/projects.html
+++ b/html/our_projects/projects.html
@@ -500,21 +500,24 @@
 
                     <div id="module-columns-container">
 
+                    	<div class="li_nave"><img src="assets/media/cohete/normal.png" width="180"></div>
+
                         <div class="columns-filter-holder">
 
                             <div id="filter-buttons-holder">
 
-                                <div class="filter-button" data-filter="entretaiment">H.ENTRETAIMENT</div>
+                                <div class="filter-button" data-filter="entretaiment">HIGH ENTRETAIMENT</div>
 
-                                <div class="filter-button" data-filter="promotion">H.PROMOTION</div>
+                                <div class="filter-button" data-filter="promotion">HIGH PROMOTION</div>
 
-                                <div class="filter-button" data-filter="interaction">H.INTERACTION </div>
+                                <div class="filter-button" data-filter="interaction">HIGH INTERACTION </div>
 
-                                <div class="filter-button" data-filter="impact">H. IMPACT</div>
+                                <div class="filter-button" data-filter="impact">HIGH IMPACT</div>
 
                                
 
                                 <div class="filter-button selected" data-filter="*">Ver Todos</div>
+
 
                             </div>
 
