--- a/html/our_projects/whatwedo.html
+++ b/html/our_projects/whatwedo.html
@@ -486,7 +486,7 @@
         <div id="filter-buttons-holder" class="whatwedomenu">
             <div class="filter-button selected"><a href="#p2.html">High Impact</a></div>
             <div class="filter-button selected"><a href="#p3.html">hIgh Interaction</a></div>
-            <div class="filter-button selected"><a href="#p4.html">hiGh Promotiont</a></div>
+            <div class="filter-button selected"><a href="#p4.html">hiGh Promotion</a></div>
             <div class="filter-button selected"><a href="#p5.html">higH Entertainment</a></div>
         </div>
 
