--- a/html/about_us/p2.html
+++ b/html/about_us/p2.html
@@ -485,9 +485,9 @@
     <div id="module-container"><!-- start #module-container -->
          <div id="filter-buttons-holder" class="whatwedomenu">
             <div class="filter-button selected active">High Impact</div>
-            <div class="filter-button selected"><a href="#p3.html">hIgh Interaction</a></div>
-            <div class="filter-button selected"><a href="#p4.html">hiGh Promotiont</a></div>
-            <div class="filter-button selected"><a href="#p5.html">higH Entertainment</a></div>
+            <div class="filter-button"><a href="#p3.html">hIgh Interaction</a></div>
+            <div class="filter-button"><a href="#p4.html">hiGh Promotiont</a></div>
+            <div class="filter-button"><a href="#p5.html">higH Entertainment</a></div>
         </div>
         <div id="module-background-holder">
 
@@ -505,7 +505,7 @@
 
                         <div class="title-holder">
 
-                        	<span class="title-text_normal wwd_title">¿QUIÉNES SOMOS?</span>
+                        	<span class="title-text_normal wwd_title"><!--¿QUIÉNES SOMOS?--></span>
 
                         </div>
 
