--- a/html/about_us/p4.html
+++ b/html/about_us/p4.html
@@ -484,10 +484,10 @@
 
     <div id="module-container"><!-- start #module-container -->
          <div id="filter-buttons-holder" class="whatwedomenu">
-            <div class="filter-button selected"><a href="#p2.html">High Impact</a></div>
-            <div class="filter-button selected"><a href="#p3.html">hIgh Interaction</a></div>
+            <div class="filter-button"><a href="#p2.html">High Impact</a></div>
+            <div class="filter-button"><a href="#p3.html">hIgh Interaction</a></div>
             <div class="filter-button selected active">hiGh Promotiont</div>
-            <div class="filter-button selected"><a href="#p5.html">higH Entertainment</a></div>
+            <div class="filter-button"><a href="#p5.html">higH Entertainment</a></div>
         </div>
         <div id="module-background-holder">
 
@@ -505,7 +505,7 @@
 
                         <div class="title-holder">
 
-                        	<span class="title-text_normal wwd_title">¿QUIÉNES SOMOS?</span>
+                        	<span class="title-text_normal wwd_title"><!--¿QUIÉNES SOMOS?--> </span>
 
                         </div>
 
