Cambios en What We Do 4 You y fuente de la página

--- a/html/about_us/p5.html
+++ b/html/about_us/p5.html
@@ -483,12 +483,6 @@
 
 
     <div id="module-container"><!-- start #module-container -->
-         <div id="filter-buttons-holder" class="whatwedomenu">
-            <div class="filter-button"><a href="#p2.html">High Impact</a></div>
-            <div class="filter-button"><a href="#p3.html">hIgh Interaction</a></div>
-            <div class="filter-button"><a href="#p4.html">hiGh Promotiont</a></div>
-            <div class="filter-button selected active">higH Entertainment</div>
-        </div>
         <div id="module-background-holder">
 
     		<img src="assets/media/home/home_layout1/images/image4.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
@@ -509,8 +503,7 @@
 
                         </div>
 
-                        <div class="custom-separator"></div>
-
+                        
                     	<div class="media-holder">
 
                         	<img src="assets/media/home/home_layout1/images/header3.png" width="100%" class="opacity_0" onload="animateThumb(this)"/>
@@ -520,19 +513,15 @@
                         <div class="custom-separator"></div>
 
                         <div class="main-text-holder">
-                            <p>Creamos experiencias de marca siempre capaces de provocarte lo que menos de esperarías de la publicidad: una sonrisa.</p>
-
+                            <p class="hpdescription">Creamos <strong>experiencias</strong> de marca siempre capaces de <strong>provocarte</strong> lo que menos de esperarías de la publicidad: <strong>una sonrisa</strong>.</p>
                             <p class="redlist">
                                     BRAND VIDEOS <br />
-                                    ADVERGAMES, <br />
-                                    STREET PERFOMANCES,<br />
-                                    SPORTS MARKETING;<br />
-                                    EXPO & CONVENTIONS,<br />
-                                    BOOKING & TALENT MANAGEMENT,<br />
-  
+                                    ADVERGAMES <br />
+                                    STREET PERFOMANCES<br />
+                                    SPORTS MARKETING<br />
+                                    EXPO & CONVENTIONS<br />
+                                    BOOKING & TALENT MANAGEMENT
                             </p>
-                            
-
                         </div>
 
                     </div>
