--- a/index.html
+++ b/index.html
@@ -253,11 +253,34 @@
 
 
                <!--Begin WWD4Y -->
-               <div data-side="none" data-module-type="slideshow" class="menu-option-holder">
-                    <div class="menu-option-background" id="menu-option-background"> </div>
-                    <div class="menu-option-text" id="menu-option-text">
-                       <a data-path-href="html/our_projects/" href="#whatwedo.html" >WHAT WE DO 4 YOU?</a>
-                    </div>                
+               <div class="menu-option-holder">
+                    <div id="menu-option-background" class="menu-option-background"></div>
+                    <div id="menu-option-text" class="menu-option-text">
+                    <a href="#home_layout_1.html" data-path-href="html/home/">WHAT WE DO 4 YOU?</a>
+                        <div class="menu-option-sign">+</div>
+                    </div>
+
+                    <!--WWD4Y SUBMENU-->
+                    <div class="sub-menu-holder">
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" >
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text"><a href="#p2.html" data-path-href="html/about_us/">HIgh Impact</a></div>
+                        </div> 
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text"><a href="#p3.html" data-path-href="html/about_us/">High Interaction </a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text"><a href="#p4.html" data-path-href="html/about_us/">HIgh Promotion</a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text"><a href="#p5.html" data-path-href="html/about_us/">High Entertainment </a></div>
+
+                        </div>
+                    </div>
+                    <!-- Ends WWD4Y SUBMENU --> 
                 </div>
                <!-- Ends WWD4Y -->  
                          
