--- a/html/about_us/p4.html
+++ b/html/about_us/p4.html
@@ -483,12 +483,7 @@
 
 
     <div id="module-container"><!-- start #module-container -->
-         <div id="filter-buttons-holder" class="whatwedomenu">
-            <div class="filter-button"><a href="#p2.html">High Impact</a></div>
-            <div class="filter-button"><a href="#p3.html">hIgh Interaction</a></div>
-            <div class="filter-button selected active">hiGh Promotiont</div>
-            <div class="filter-button"><a href="#p5.html">higH Entertainment</a></div>
-        </div>
+         
         <div id="module-background-holder">
 
     		<img src="assets/media/home/home_layout1/images/image3.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
@@ -509,11 +504,11 @@
 
                         </div>
 
-                        <div class="custom-separator"></div>
+                       
 
                     	<div class="media-holder">
 
-                        	<img src="assets/media/home/home_layout1/images/header3.png" width="100%" class="opacity_0" onload="animateThumb(this)"/>
+                        	<img src="assets/media/home/home_layout1/images/header4.png" width="100%" class="opacity_0" onload="animateThumb(this)"/>
 
                         </div>
 
@@ -521,7 +516,7 @@
 
                         <div class="main-text-holder">
 
-                        	<p>Implementamos ideas y  estrategias, capaces de generar trial & brand advocacy, brindando una mezcla cautivadora de beneficios tangibles y vivenciales.</p>
+                        	<p class="hpdescription">Implementamos <strong>ideas</strong> y  <strong>estrategias</strong> capaces de generar <strong>trial</strong> & <strong>brand</strong> <strong>advocacy</strong>, brindando una mezcla cautivadora de <strong>beneficios tangibles</strong> y <strong>vivenciales</strong>.</p>
 
                             <p class="redlist">
                                     POP MATERIALS,<br />
@@ -529,8 +524,8 @@
                                     SAMPLING &   DEMONSTRATION PLANS, <br />
                                     IN-STORE ACTIVATIONS,<br />
                                     ON/OFFLINE PROMOTIONS,<br />
-                                    DIRECT MARKETING, <br />
-                                    LOYALTY PROGRAMS
+                                    LOYALTY PROGRAMS<br />
+                                    RELATIONSHIP MARKETING
                             </p>
 
                         </div>
